crates/ui/src/screens/preparations/snapshots/trpg_ui__screens__preparations__tests__a_benched_unit_snapshot.snap
---
source: crates/ui/src/screens/preparations/tests.rs
expression: h.snapshot()
---
                                                                                                    
  Preparations                 Loadouts      Pack      Options      Fight!                          
                                                                                                    
┌─ Units ──────┐┌─ Test Scout · Archer ────────────┐┌─ Stock: weapons ─────────────────────────────┐
│ Test Lord    ││ Weapon     Steel Bow       25/25 ││ (put back in stock)                          │
│ Test Knight  ││ Weapon     -                     ││ Steel Spear     can't use spears             │
│ Test Archer  ││ Weapon     -                     ││ Iron Axe        can't use axes               │
│ Test Mage    ││ Armour     Leather Vest          ││ Iron Sword      can't use swords             │
│ Test Scout   ││ Accessory  -                     ││ Iron Bow        20/20  from Test Archer      │
│              ││                                  ││                                              │
│              ││ AS 2 → 4 with Iron Bow           ││                                              │
│              ││                                  ││                                              │
│              ││ Not in this battle               ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
└──────────────┘└──────────────────────────────────┘└──────────────────────────────────────────────┘
                                                                                                    
                                                                                                    
                                                                                                    
                                  arrows choose · f take · d back                                   
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbbbbbbbbbbbaaaaaaaaaaaaaaaabbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
ccdddddddcccccccccdddddddddddddddddddddccccccccccccceeddddddddddddddddeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
cffffffffffffffccddddddddddddddddddddddddddddddddddceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffcegggggggggggggggggggggggggggggggggggggggggggggge
cffffffffffffffccffffffffffffffffffffffffffffffffffcegggggggggggggggggggggggggggggggggggggggggggggge
cffffffffffffffccffffffffffffffffffffffffffffffffffcegggggggggggggggggggggggggggggggggggggggggggggge
cggggggggggggggccffffffffffffffffffffffffffffffffffcehhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccfggggggggggggggggggfffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cccccccccccccccccccccccccccccccccccccccccccccccccccceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:text_highlight bg:black
c = fg:panel_border bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:panel_border_focus bg:panel_bg
f = fg:text bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:panel_bg bg:panel_border_focus
i = fg:text_dim bg:black
