crates/ui/src/screens/preparations/snapshots/trpg_ui__screens__preparations__tests__loadouts_tab_snapshot.snap
---
source: crates/ui/src/screens/preparations/tests.rs
expression: h.snapshot()
---
                                                                                                    
  Preparations                 Loadouts      Pack      Options      Fight!                          
                                                                                                    
┌─ Units ──────┐┌─ Test Lord · Exile ──────────────┐┌─ Stock: weapons ─────────────────────────────┐
│ Test Lord    ││ Weapon     Iron Sword      20/20 ││ Steel Spear     can't use spears             │
│ Test Knight  ││ Weapon     Steel Sword     25/25 ││ Iron Axe        can't use axes               │
│ Test Archer  ││ Weapon     -                     ││ Iron Sword      Mt 5 Hit 90 Wt 2 Rng1 20/20  │
│ Test Mage    ││ Armour     Leather Vest          ││                                              │
│ Test Scout   ││ Accessory  -                     ││                                              │
│              ││                                  ││                                              │
│              ││ AS 7 → 6 with Iron Sword         ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
│              ││                                  ││                                              │
└──────────────┘└──────────────────────────────────┘└──────────────────────────────────────────────┘
                                                                                                    
                                                                                                    
                                                                                                    
                                  arrows choose · f take · d back                                   
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbbbbbbbbbbbaaaaaaaaaaaaaaaabbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
ccdddddddcccccccccdddddddddddddddddddccccccccccccccceeddddddddddddddddeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
cddddddddddddddccffffffffffffffffffffffffffffffffffcegggggggggggggggggggggggggggggggggggggggggggggge
cffffffffffffffccffffffffffffffffffffffffffffffffffcegggggggggggggggggggggggggggggggggggggggggggggge
cffffffffffffffccddddddddddddddddddddddddddddddddddcehhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cggggggggggggggccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cffffffffffffffccffffffffffffffffffffffffffffffffffceffffffffffffffffffffffffffffffffffffffffffffffe
cccccccccccccccccccccccccccccccccccccccccccccccccccceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:text_highlight bg:black
c = fg:panel_border bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:panel_border_focus bg:panel_bg
f = fg:text bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:panel_bg bg:panel_border_focus
i = fg:text_dim bg:black
